Fixed styling erros that create horizontal scroll for the whole page

--- a/src/components/ProfileContent/ProfileContent.module.scss
+++ b/src/components/ProfileContent/ProfileContent.module.scss
@@ -2,11 +2,10 @@
 @use '../../styles/variables.scss' as variables;
 
 .profileContent {
-  margin: 0 auto;
   min-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
-  width: 100%;
+
   background-color: variables.$color-background;
   height: 100%;
 
