--- a/src/components/UserProfileHeader/UserLinks/UserLinks.module.scss
+++ b/src/components/UserProfileHeader/UserLinks/UserLinks.module.scss
@@ -11,7 +11,6 @@
     min-width: 320px;
     padding-left: 20px;
     padding-right: 20px;
-    width: 100%;
 
     @include mixin.phoneSmall {
       overflow-x: auto;
